--- a/config.toml
+++ b/config.toml
@@ -41,8 +41,8 @@ paginate = 6
 [params]
     description = "A website built through Hugo and blogdown."
     summary_length = 300
-    github_edit = "https://github.com/openweedsci/OpenWeedScience/edit/master/content/"
-    footer = "&copy; [Open Weed Science](https://openweedsci.org) 2020 | [Github](https://github.com/openweedsci) | [Twitter](https://twitter.com/openweedsci)"
+    github_edit = "https://github.com/maxwelco/OpenWeedSci/edit/master/content/"
+    footer = "&copy; [Open Weed Science](https://openweedsci.org) 2020 | [Github](https://github.com/maxwelco/OpenWeedSci) | [Twitter](https://twitter.com/openweedsci)"
 
 [params.text]
     back = "&larr; Back to Home"
