--- a/data/authors.yaml
+++ b/data/authors.yaml
@@ -5,3 +5,4 @@
 "Lucas Kopecky Bobadilla": "Lucas Kopecky Bobadilla is currently a PhD student at the University of Illinois-Urbana Champaign. You can contact him at lucask3@illinois.edu."
 "Sarah Striegel": "Sarah Striegel is currently a MSc student at the University of Wisconsin-Madison. You can find her on [Twitter](https://twitter.com/sarahstriegel)."
 "Nick Arneson": "Nick Arneson is currently an Outreach Specialist at the University of Wisconsin-Madison. You can find him on [Twitter](https://twitter.com/arnaman6)."
+"José J Nunes": "Jose J Nunes is currently a PhD student at the University of Wisconsin-Madison. You can find him on [Twitter](https://twitter.com/JoseJuniorNunes)."
